--- a/evcc/config.json
+++ b/evcc/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "evcc",
+  "name": "evcc (daheimladen beta)",
   "version": "0.105.2",
   "slug": "evcc",
   "description": "EV Charge Controller!",
