--- a/evcc-nightly/config.json
+++ b/evcc-nightly/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "evcc (nightly)",
+  "name": "evcc (nightly, daheimladen beta)",
   "version": "nightly",
   "slug": "evcc-nightly",
   "description": "Nightly version of EV Charge Controller!",
