--- a/evcc/config.json
+++ b/evcc/config.json
@@ -14,7 +14,7 @@
   "ingress": true,
   "ingress_port": 7070,
   "init": false,
-  "image": "andig/evcc",
+  "image": "simown/evcc_daheimladen_beta",
   "options": {
       "config_file": "/config/evcc.yaml"
   },
