--- a/evcc/config.json
+++ b/evcc/config.json
@@ -1,6 +1,6 @@
 {
   "name": "evcc (daheimladen beta)",
-  "version": "0.105.3",
+  "version": "latest",
   "slug": "evcc",
   "description": "EV Charge Controller!",
   "url": "https://github.com/ownakasimon/evcc",
